fix: Apply dark mode to page-level scrollbars in Chrome

--- a/src/index.css
+++ b/src/index.css
@@ -65,4 +65,9 @@
   .awsui-dark-mode {
     color-scheme: dark;
   }
+
+  /* This is necessary for Chrome to apply dark mode to page-level scrollbars  */
+  html:has(body.awsui-dark-mode) {
+    color-scheme: dark;
+  }
 }
